# bioformats-rs-llm

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
bench/: BfBench.java  Cargo.toml  bench_rust.rs  run.sh
bioformats-rs/: Cargo.toml
bioformats-rs/crates/bioformats/: Cargo.toml
bioformats-rs/crates/bioformats-andor/: Cargo.toml
bioformats-rs/crates/bioformats-andor/src/: lib.rs
bioformats-rs/crates/bioformats-biorad/: Cargo.toml
bioformats-rs/crates/bioformats-biorad/src/: lib.rs
bioformats-rs/crates/bioformats-bmp/src/: lib.rs
bioformats-rs/crates/bioformats-clinical/: Cargo.toml
bioformats-rs/crates/bioformats-clinical/src/: lib.rs
bioformats-rs/crates/bioformats-common/: Cargo.toml
bioformats-rs/crates/bioformats-common/src/: endian.rs  error.rs  lib.rs  ome_metadata.rs  pixel_type.rs  reader.rs
bioformats-rs/crates/bioformats-czi/: Cargo.toml
bioformats-rs/crates/bioformats-czi/src/: lib.rs
bioformats-rs/crates/bioformats-deltavision/src/: lib.rs
bioformats-rs/crates/bioformats-extended/: Cargo.toml
bioformats-rs/crates/bioformats-flim/src/: lib.rs
bioformats-rs/crates/bioformats-hamamatsu/: Cargo.toml
bioformats-rs/crates/bioformats-hamamatsu/src/: lib.rs
bioformats-rs/crates/bioformats-hcs2/src/: lib.rs
bioformats-rs/crates/bioformats-ics/src/: lib.rs
bioformats-rs/crates/bioformats-imagic/src/: lib.rs
bioformats-rs/crates/bioformats-jpeg/: Cargo.toml
bioformats-rs/crates/bioformats-jpeg/src/: lib.rs  writer.rs
bioformats-rs/crates/bioformats-metaimage/src/: lib.rs
bioformats-rs/crates/bioformats-misc4/: Cargo.toml
bioformats-rs/crates/bioformats-mrc/src/: lib.rs
bioformats-rs/crates/bioformats-nd2/: Cargo.toml
bioformats-rs/crates/bioformats-nrrd/: Cargo.toml
bioformats-rs/crates/bioformats-nrrd/src/: lib.rs
bioformats-rs/crates/bioformats-ome/: Cargo.toml
bioformats-rs/crates/bioformats-ome/src/: lib.rs
bioformats-rs/crates/bioformats-png/: Cargo.toml
bioformats-rs/crates/bioformats-png/src/: lib.rs
bioformats-rs/crates/bioformats-raster/: Cargo.toml
bioformats-rs/crates/bioformats-sem/src/: lib.rs
bioformats-rs/crates/bioformats-spe/src/: lib.rs
bioformats-rs/crates/bioformats-spm/: Cargo.toml
bioformats-rs/crates/bioformats-spm/src/: lib.rs
bioformats-rs/crates/bioformats-tiff/: Cargo.toml
bioformats-rs/crates/bioformats-tiff-wrappers/: Cargo.toml
bioformats-rs/crates/bioformats-tiff-wrappers/src/: lib.rs
bioformats-rs/crates/bioformats-tiff/src/: lib.rs  parser.rs  reader.rs
bioformats-rs/crates/bioformats/benches/: read_ome_tiff.rs
bioformats-rs/crates/bioformats/src/: lib.rs  pixel.rs  reader.rs  registry.rs  writer_registry.rs
bioformats-rs/crates/bioformats/tests/: format_tests.rs  integration_test.rs  write_test.rs
crates/bioformats/: Cargo.toml
crates/bioformats-afm/: Cargo.toml
crates/bioformats-afm/src/: lib.rs
crates/bioformats-aim/: Cargo.toml
crates/bioformats-aim/src/: lib.rs
crates/bioformats-amira/: Cargo.toml
crates/bioformats-amira/src/: lib.rs
crates/bioformats-avi/: Cargo.toml
crates/bioformats-avi/src/: lib.rs
crates/bioformats-bdv/: Cargo.toml
crates/bioformats-bdv/src/: lib.rs
crates/bioformats-biorad/src/: lib.rs
crates/bioformats-bmp/: Cargo.toml
crates/bioformats-bmp/src/: writer.rs
crates/bioformats-camera2/: Cargo.toml
crates/bioformats-camera2/src/: lib.rs
crates/bioformats-cellh5/: Cargo.toml
crates/bioformats-cellh5/src/: lib.rs
crates/bioformats-common/src/: codec.rs  io.rs  metadata.rs  ome_metadata.rs  (+1 more)
crates/bioformats-czi/: Cargo.toml
crates/bioformats-czi/src/: lib.rs
crates/bioformats-deltavision/: Cargo.toml
crates/bioformats-dicom/: Cargo.toml
crates/bioformats-eps/: Cargo.toml
crates/bioformats-fake/: Cargo.toml
crates/bioformats-fits/: Cargo.toml
crates/bioformats-flex/: Cargo.toml
crates/bioformats-flim/: Cargo.toml
crates/bioformats-flim2/: Cargo.toml
crates/bioformats-gatan/: Cargo.toml
crates/bioformats-hcs2/: Cargo.toml
crates/bioformats-ics/: Cargo.toml
crates/bioformats-imagic/: Cargo.toml
crates/bioformats-imaris/: Cargo.toml
crates/bioformats-incell/: Cargo.toml
crates/bioformats-legacy/: Cargo.toml
crates/bioformats-lei/: Cargo.toml
crates/bioformats-lif/: Cargo.toml
crates/bioformats-lim/: Cargo.toml
crates/bioformats-lsm/: Cargo.toml
crates/bioformats-metaimage/: Cargo.toml
crates/bioformats-metamorph/: Cargo.toml
crates/bioformats-mias/: Cargo.toml
crates/bioformats-micromanager/: Cargo.toml
crates/bioformats-misc/: Cargo.toml
crates/bioformats-mrc/: Cargo.toml
crates/bioformats-nifti/: Cargo.toml
crates/bioformats-norpix/: Cargo.toml
crates/bioformats-olympus/: Cargo.toml
crates/bioformats-olympus/src/: lib.rs
crates/bioformats-ome/: Cargo.toml
crates/bioformats-opus/: Cargo.toml
crates/bioformats-pcx/: Cargo.toml
crates/bioformats-perkinelmer/: Cargo.toml
crates/bioformats-photoshop/: Cargo.toml
crates/bioformats-prairie/: Cargo.toml
crates/bioformats-sem/: Cargo.toml
crates/bioformats-simfcs/: Cargo.toml
crates/bioformats-spe/: Cargo.toml
crates/bioformats-svs/: Cargo.toml
crates/bioformats-viff/: Cargo.toml
crates/bioformats-visitech/: Cargo.toml
crates/bioformats-volocity/: Cargo.toml
crates/bioformats-xrm/: Cargo.toml
crates/bioformats-zip/: Cargo.toml
crates/bioformats-zvi/: Cargo.toml
src/: error.rs  lib.rs  metadata.rs  pixel.rs  reader.rs  registry.rs  writer_registry.rs
src/common/: codec.rs  metadata.rs  reader.rs  writer.rs
src/formats/: afm.rs  aim.rs  amira.rs  andor.rs  avi.rs  bdv.rs  biorad.rs  bmp.rs  camera2.rs  cellh5.rs  clinical.rs  czi.rs  deltavision.rs  dicom.rs  eps.rs  extended.rs  fake.rs  fits.rs  flex.rs  flim.rs  flim2.rs  gatan.rs  hamamatsu.rs  hcs2.rs  ics.rs  imagic.rs  imaris.rs  incell.rs  jpeg.rs  legacy.rs  lei.rs  lif.rs  lim.rs  lsm.rs  metaimage.rs  metamorph.rs  mias.rs  micromanager.rs  misc.rs  misc4.rs  (+27 more)
src/tiff/: compression.rs  ifd.rs  parser.rs  reader.rs  writer.rs
tests/: write_test.rs
tests/fixtures/: test_8x8_gray8.tif
(+46 files in other folders)
