[package]
name = "bioformats-olympus"
version = "0.1.0"
edition = "2021"
description = "Olympus FV1000 OIF directory format and NDPI whole-slide reader"

[dependencies]
bioformats-common = { path = "../bioformats-common" }
bioformats-tiff   = { path = "../bioformats-tiff" }
log = { workspace = true }
