[package]
name = "bioformats-common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
byteorder = { workspace = true }
log = { workspace = true }
weezl = { workspace = true }
flate2 = { workspace = true }
jpeg-decoder = { workspace = true }
zstd = { workspace = true }
