[package]
name = "bioformats-raster"
version = "0.1.0"
edition = "2021"
description = "GIF, TGA, WebP, PNM, HDR, OpenEXR, DDS readers (wraps image crate)"

[dependencies]
bioformats-common = { path = "../bioformats-common" }
image = { workspace = true, features = ["gif", "tga", "webp", "pnm", "hdr", "exr", "dds", "ff"] }
log = { workspace = true }
