[package]
name = "bioformats-tiff"
version = "0.1.0"
edition = "2021"
description = "TIFF / OME-TIFF / BigTIFF reader for bioformats-rs"

[dependencies]
bioformats-common = { path = "../bioformats-common" }
byteorder = { workspace = true }
flate2 = { workspace = true }
weezl = { workspace = true }
jpeg-decoder = { workspace = true }
zstd = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
