[package]
name = "bioformats"
version = "0.1.0"
edition = "2021"
description = "Pure Rust reimplementation of Bio-Formats — read/write scientific image formats"
license = "MIT OR Apache-2.0"

[dependencies]
bioformats-common    = { path = "../bioformats-common" }
bioformats-tiff      = { path = "../bioformats-tiff" }
bioformats-png       = { path = "../bioformats-png" }
bioformats-jpeg      = { path = "../bioformats-jpeg" }
bioformats-bmp       = { path = "../bioformats-bmp" }
bioformats-czi       = { path = "../bioformats-czi" }
bioformats-raster    = { path = "../bioformats-raster" }
bioformats-ics       = { path = "../bioformats-ics" }
bioformats-mrc       = { path = "../bioformats-mrc" }
bioformats-fits      = { path = "../bioformats-fits" }
bioformats-nrrd      = { path = "../bioformats-nrrd" }
bioformats-metaimage = { path = "../bioformats-metaimage" }
bioformats-lif       = { path = "../bioformats-lif" }
bioformats-nd2       = { path = "../bioformats-nd2" }
bioformats-dicom     = { path = "../bioformats-dicom" }
bioformats-nifti     = { path = "../bioformats-nifti" }
bioformats-gatan     = { path = "../bioformats-gatan" }
bioformats-lsm       = { path = "../bioformats-lsm" }
bioformats-metamorph = { path = "../bioformats-metamorph" }
bioformats-micromanager = { path = "../bioformats-micromanager" }
bioformats-biorad       = { path = "../bioformats-biorad" }
bioformats-deltavision  = { path = "../bioformats-deltavision" }
bioformats-spe          = { path = "../bioformats-spe" }
bioformats-andor        = { path = "../bioformats-andor" }
bioformats-amira        = { path = "../bioformats-amira" }
bioformats-imagic       = { path = "../bioformats-imagic" }
bioformats-olympus      = { path = "../bioformats-olympus" }
bioformats-flim         = { path = "../bioformats-flim" }
bioformats-clinical     = { path = "../bioformats-clinical" }
bioformats-norpix       = { path = "../bioformats-norpix" }
bioformats-ome          = { path = "../bioformats-ome" }
bioformats-hamamatsu    = { path = "../bioformats-hamamatsu" }
bioformats-pcx          = { path = "../bioformats-pcx" }
bioformats-photoshop    = { path = "../bioformats-photoshop" }
bioformats-simfcs       = { path = "../bioformats-simfcs" }
bioformats-svs          = { path = "../bioformats-svs" }
bioformats-prairie      = { path = "../bioformats-prairie" }
bioformats-eps          = { path = "../bioformats-eps" }
bioformats-afm          = { path = "../bioformats-afm" }
bioformats-lim          = { path = "../bioformats-lim" }
bioformats-aim          = { path = "../bioformats-aim" }
bioformats-zip          = { path = "../bioformats-zip" }
bioformats-fake         = { path = "../bioformats-fake" }
bioformats-viff         = { path = "../bioformats-viff" }
bioformats-incell       = { path = "../bioformats-incell" }
bioformats-visitech     = { path = "../bioformats-visitech" }
bioformats-perkinelmer  = { path = "../bioformats-perkinelmer" }
bioformats-mias         = { path = "../bioformats-mias" }
bioformats-avi          = { path = "../bioformats-avi" }
bioformats-lei          = { path = "../bioformats-lei" }
bioformats-flex         = { path = "../bioformats-flex" }
bioformats-volocity     = { path = "../bioformats-volocity" }
bioformats-opus         = { path = "../bioformats-opus" }
bioformats-legacy       = { path = "../bioformats-legacy" }
bioformats-xrm          = { path = "../bioformats-xrm" }
bioformats-tiff-wrappers = { path = "../bioformats-tiff-wrappers" }
bioformats-misc          = { path = "../bioformats-misc" }
thiserror = { workspace = true }
log = { workspace = true }
